# HomeBuyerAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  api_server.py  check_embeddings.py  check_schema.py  cloudbuild.yaml  debug_bigquery.py  docker-compose.yml  firestore_setup_guide.md  main.py  migrate_query_history.py  mock_adk.py  orchestrator.py  orchestrator_adk.py  pyproject.toml  query_history.py  query_history_cloud.py  requirements-cloud.txt  requirements-production.txt  requirements.txt  test_end_to_end.py  test_queries.py  test_schema.py  test_vector_search.py  wsgi.py
.github/: copilot-instructions.md
.github/workflows/: README.md
agents/: affordability_agent.py  agent_utils.py  agentflow.md  base_agent.py  hazard_analysis_agent.py  listing_review_agent.py  locality_review_agent.py  recommendation_agent.py  vector_search_utils.py
config/: affordability_params.json  cloud_config.py  listings.csv  neighborhoods.csv  settings.py
deploy/: README.md  deploy.ps1  deploy.sh  deploy_cloud_run.ps1  deploy_cloud_run.sh
docs/: deployment_architecture.md  deployment_checklist.md  query_history_cloud_deployment.md
examples/: query_history_integration_examples.py
frontend/: .dockerignore  .gcloudignore  Dockerfile  README.md  cloudbuild.yaml  nginx.conf  package-lock.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: ProgressTracker.js  RecommendationResults.js  SearchForm.js
frontend/src/services/: api.js
