[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home_buyer_agent"
version = "0.1.0"
description = "Multi-agent home buying application using Google ADK framework patterns"
authors = [ { name = "Your Name", email = "you@example.com" } ]
dependencies = [
    "google-cloud-bigquery",
    "python-dotenv",
    "numpy"
]
